[package]
name = "space_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
libc = "0.2.153"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
termios = "0.3.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
